--- a/download.html
+++ b/download.html
@@ -19,19 +19,26 @@
     </script>
 
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
         ym(62712055, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true,
-            webvisor:true
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/62712055" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/62712055" style="position:absolute; left:-9999px;" alt=""/></div>
+    </noscript>
     <!-- /Yandex.Metrika counter -->
 
     <meta charset="utf-8">
@@ -86,35 +93,52 @@
 <main role="main" id="download">
     <section class="jumbotron">
         <div class="container">
-            <h1 class="text-center">Download</h1>
+            <h1 class="text-center mc-blue">Download</h1>
+            <br/><br/><br/>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Binary Cli</h4>
+                        <p class="lead">
+                            You can download Microconfig for your OS from <a class="mc-blue"
+                                href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
+                        </p>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Homebrew</h4>
+                        <p class="lead">
+                            MacOS install with Homebrew coming soon...<br/>
+                        </p>
+                        <br/>
+                    </div>
+                </div>
+            </div>
             <br/>
-            <h4>Binary Cli</h4>
-            <p class="lead">
-                You can download Microconfig for your OS from
-                <a href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
-            </p>
-            <br/>
-            <h4>Brew</h4>
-            <p class="lead">
-                MacOS install with HomeBrew coming soon...<br/>
-            </p>
-            <br/>
-            <h4>Jar Cli</h4>
-            <p class="lead">
-                You can download Microconfig executable jar from <a href="https://github.com/microconfig/microconfig/releases">Github</a> or
-                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central (microconfig-cli:all)</a>.
-            </p>
-            <br/>
-            <h4>Core Jar</h4>
-            <p class="lead">
-                If you want to add Microconfig-core as a dependency to your Java project use
-                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core artifact</a>.
-            </p>
-            <br/>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Jar Cli</h4>
+                        <p class="lead">
+                            You can download Microconfig executable jar from <a class="mc-blue"
+                                href="https://github.com/microconfig/microconfig/releases">Github</a> or
+                            <a class="mc-blue" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central</a>.
+                        </p>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Core Jar</h4>
+                        <p class="lead">
+                            If you want to add Microconfig-core as a dependency to your Java project use
+                            <a class="mc-blue" href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
+                        </p>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <br/><br/>
 
-            <h4>How to use</h4>
-            <p class="lead">
-                Check out <a href="quickstart.html">quickstart</a> to learn how to use Microconfig.
+            <h4 class="text-center mc-green">How-To</h4>
+            <p class="lead text-center">
+                Check out <a class="mc-blue" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
             </p>
         </div>
     </section>
