--- a/features.html
+++ b/features.html
@@ -113,13 +113,13 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 col-lg-6">
-                                <h4 id="problem">Problem</h4>
+                                <h4>Problem</h4>
 
                                 <p>Other configuration frameworks can demand a specific configuration folder structure
                                     or specific filenames.</p>
                             </div>
                             <div class="col-md-12 col-lg-6">
-                                <h4 id="solution">Solution</h4>
+                                <h4>Solution</h4>
 
                                 <p>Microconfig only asks you to create folders for your services somewhere in
                                     <code>components</code> folder. You choose the names and folder structure. If you
